--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -2,13 +2,13 @@ name: Auto merge when label to "to deploy" (dev)
 
 on:
   pull_request:
-    branch: 
+    branches: 
       - preview/dev
 
 jobs:
 
   build:
-    if: ${{ github.event.label.name == 'workflow: to deploy' }}
+    if: ${{ github.event.label.name == '[workflow] to deploy' }}
     runs-on: ubuntu-latest
 
     steps:
