--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -2,6 +2,7 @@ name: Auto merge when label to "to deploy" (dev)
 
 on:
   pull_request:
+    types: [ labeled ]
     branches: 
       - preview/dev
 
