--- a/.github/workflows/add-comment.yml
+++ b/.github/workflows/add-comment.yml
@@ -10,7 +10,7 @@ on:
       - labeled
 jobs:
   add-comment:
-    if: github.event.label.name == 'help-wanted'
+    if: github.event.label.name == 'help wanted'
     runs-on: ubuntu-latest
     permissions:
       issues: write
