--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -12,7 +12,7 @@ env:
 jobs:
 
   build:
-    if: github.event.label.name == '[workflow] to deploy' && github.event.pull_request.base.ref == env.target_branch
+    if: github.event.label.name == '[workflow] to deploy' && github.event.pull_request.base.ref == 'preview/dev'
     runs-on: ubuntu-latest
 
     steps:
