--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -10,7 +10,7 @@ env:
   target_branch: preview/dev
 
 jobs:
-
+# github.event.pull_request.head.ref
   build:
     if: github.event.label.name == '[workflow] to deploy' && github.event.pull_request.base.ref == 'preview/dev'
     runs-on: ubuntu-latest
@@ -19,6 +19,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Send greeting
       run: |
+        git branch --show-current 
         echo ">> ${{ toJSON(github.event.pull_request) }}"
 
 #   Job1:
