--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -22,6 +22,7 @@ jobs:
     - name: merge
       run: |
         git clone https://mywrm:${{ env.access_token }}@github.com/my-wrm/dummy-project
+        cd dummy-project
         git checkout ${{ github.event.pull_request.base.ref }}
         git merge --no-ff ${{ github.event.pull_request.head.ref }}
         git push origin ${{ github.event.pull_request.base.ref }}
