--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -21,7 +21,7 @@ jobs:
     #     ref: ''
     - name: merge
       run: |
-        git config --global user.email "deploy@wrmsoftware.com"
+        git config --global user.email "my@wrmsoftware.com"
         git config --global user.name "Merge script"
         git clone https://mywrm:${{ env.access_token }}@github.com/my-wrm/dummy-project
         cd dummy-project
