--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -23,12 +23,12 @@ jobs:
       run: |
         git config --global user.email "my@wrmsoftware.com"
         git config --global user.name "Merge script"
-        git clone https://mywrm:${{ env.access_token }}@github.com/my-wrm/dummy-project
+        git clone https://mywrm:${{ env.access_token }}@github.com/my-wrm/dummy-project.git
         cd dummy-project
         git fetch origin
         git checkout ${{ github.event.pull_request.base.ref }}
         git merge --no-ff origin/${{ github.event.pull_request.head.ref }}
-        git push origin ${{ github.event.pull_request.base.ref }}
+# git push origin ${{ github.event.pull_request.base.ref }}
 
     - name: Send greeting
       run: |
