--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -21,15 +21,15 @@ jobs:
     #     ref: ''
     - name: merge
       run: |
-        git config --global user.email "my@wrmsoftware.com"
-        git config --global user.name "Merge script"
-        git clone https://mywrm:${{ env.access_token }}@github.com/my-wrm/dummy-project.git
-        Start-Sleep -s 3
-        cd dummy-project
-        git fetch origin
-        git checkout ${{ github.event.pull_request.base.ref }}
-        git merge --no-ff origin/${{ github.event.pull_request.head.ref }}
-        git remote -v
+        git config --global user.email "my@wrmsoftware.com" && \
+        git config --global user.name "Merge script" && \
+        git clone https://mywrm:${{ env.access_token }}@github.com/my-wrm/dummy-project.git && \
+        sleep 3 && \
+        cd dummy-project && \
+        git fetch origin && \
+        git checkout ${{ github.event.pull_request.base.ref }} && \
+        git merge --no-ff origin/${{ github.event.pull_request.head.ref }} && \
+        git remote -v && \
         git push origin
 
     - name: Send greeting
