--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -21,13 +21,10 @@ jobs:
     #     ref: ''
     - name: merge
       run: |
-        git config --global user.email "my@wrmsoftware.com"
-        git config --global user.name "Merge script"
-        git clone https://mywrm:${{ env.access_token }}@github.com/my-wrm/dummy-project.git
-        cd dummy-project
-        git fetch origin
-        git checkout ${{ github.event.pull_request.base.ref }}
-        git merge --no-ff origin/${{ github.event.pull_request.head.ref }}
+        git clone https://github.com/my-wrm/merge-script.git
+        cd merge-script
+        chmod a+x merge.sh
+        ./merge.sh ${{ env.access_token }} ${{ github.event.pull_request.base.ref }} ${{ github.event.pull_request.head.ref }}
 
     - name: Send greeting
       run: |
