--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -21,8 +21,8 @@ jobs:
     #     ref: ''
     - name: merge
       run: |
-        git clone https://github.com/my-wrm/merge-script.git
-        
+        echo "Hello"
+
     - name: Send greeting
       run: |
         echo ">> ${{ toJSON(github.event.pull_request) }}"
