--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,3 +1,4 @@
+# https://stackoverflow.com/a/65236345
 name: Auto merge when label to "to deploy" (dev)
 
 on:
@@ -19,7 +20,11 @@ jobs:
     #     ref: ''
     - name: merge
       run: |
-        git config --global user.email "my@wrmsoftware.com"
+        git clone https://mywrm:${{ env.access_token }}@github.com/my-wrm/merge-script.git
+        cd merge-script
+        chmod a+x merge.sh
+        ./merge.sh ${{ env.access_token }} ${{ github.event.pull_request.base.ref }} ${{ github.event.pull_request.head.ref }}
+
 
     - name: Send greeting
       run: |
