--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -23,6 +23,7 @@ jobs:
       run: |
         git config --global user.email "my@wrmsoftware.com"
         git config --global user.name "Merge script"
+        git remote -v
         git merge --no-ff origin/${{ github.event.pull_request.head.ref }}
         git push
 
