--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -21,20 +21,25 @@ jobs:
     #     ref: '${{ github.event.pull_request.base.ref }}'
     - name: merge
       run: |
-        git clone https://mywrm:${{ env.ACCESS_TOKEN }}@github.com/my-wrm/dummy-project.git
-        cd dummy-project
-        git config --global user.email "my@wrmsoftware.com"
-        git config --global user.name "Merge script"
-        git remote -v
-        git branch
-        git checkout ${{ github.event.pull_request.base.ref }}
-        git merge --no-ff origin/${{ github.event.pull_request.head.ref }}
+        echo "Merging... ${{ github.event.pull_request.title }} #${{ github.event.pull_request.number }}"
+        echo "${{ env.ACCESS_TOKEN }}" > token.txt
+        gh auth login --with-token < token.txt
+        gh pr merge ${{ github.event.pull_request.number }} --repo my-wrm/dummy-project --merge
 
-    - name: push
-      run: |
-        cd dummy-project
-        git remote set-url --push origin https://mywrm:${{ env.ACCESS_TOKEN }}@github.com/my-wrm/dummy-project.git
-        git push
+#     git clone https://mywrm:${{ env.ACCESS_TOKEN }}@github.com/my-wrm/dummy-project.git
+#     cd dummy-project
+#     git config --global user.email "my@wrmsoftware.com"
+#     git config --global user.name "Merge script"
+#     git remote -v
+#     git branch
+#     git checkout ${{ github.event.pull_request.base.ref }}
+#     git merge --no-ff origin/${{ github.event.pull_request.head.ref }}
+
+# - name: push
+#   run: |
+#     cd dummy-project
+#     git remote set-url --push origin https://mywrm:${{ env.ACCESS_TOKEN }}@github.com/my-wrm/dummy-project.git
+#     git push
 
     - name: Send greeting
       run: |
