--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -22,8 +22,8 @@ jobs:
     - name: merge
       run: |
         echo "Merging... ${{ github.event.pull_request.title }} #${{ github.event.pull_request.number }}"
-        echo "${{ env.ACCESS_TOKEN }}" > token.txt
-        gh auth login --with-token < token.txt
+# echo "${{ env.ACCESS_TOKEN }}" > token.txt
+# gh auth login --with-token < token.txt
         gh pr merge ${{ github.event.pull_request.number }} --repo my-wrm/dummy-project --merge
 
 #     git clone https://mywrm:${{ env.ACCESS_TOKEN }}@github.com/my-wrm/dummy-project.git
