--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,7 @@ on:
 
 env:
   ready_label: ready to deploy
+  deployed_label: deployed
 
 jobs:
   deploy-info:
@@ -13,8 +14,16 @@ jobs:
     - name: show deploy info
       run: |
         gh pr list --label '${{ env.ready_label }}' --state merged --repo my-wrm/dummy-project > pr.txt
+        PRS=""
         while read PR_ITEM; do
-            echo "::notice title=Deploying Pull Request::$PR_ITEM"
+          PRS="${PRS}#$PR_ITEM\n"
+          PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
+          gh pr edit $PR_NUMBER --remove-label '${{ env.ready_label }}' --repo my-wrm/dummy-project
+          gh pr edit $PR_NUMBER --add-label '${{ env.deployed_label }}' --repo my-wrm/dummy-project
         done < pr.txt
+        echo "::notice title=Deploying Pull Request::$PRS"
+
       env:
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+
+        
