--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,15 +14,14 @@ jobs:
     - name: show deploy info
       run: |
         gh pr list --label '${{ env.ready_label }}' --state merged --repo my-wrm/dummy-project > pr.txt
-        PRS=""
         while read PR_ITEM; do
-          PRS="${PRS}#$PR_ITEM\n"
           PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
+          PR_TITLE=$(echo $PR_ITEM | awk '{ print $2 }')
+          echo "::notice title=Deploying #$PR_NUMBER $PR_TITLE::#$PR_ITEM"
           gh pr edit $PR_NUMBER --remove-label '${{ env.ready_label }}' --repo my-wrm/dummy-project
           gh pr edit $PR_NUMBER --add-label '${{ env.deployed_label }}' --repo my-wrm/dummy-project
         done < pr.txt
-        echo "::notice title=Deploying Pull Request::$PRS"
-
+        
       env:
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
