--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -17,7 +17,7 @@ jobs:
         while read PR_ITEM; do
           PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
           PR_TITLE=$(echo $PR_ITEM | awk '{ print $2 }')
-          echo "::notice title=Deploying #$PR_NUMBER $PR_TITLE::#$PR_ITEM"
+          echo "::notice title=Deploying #$PR_ITEM"
           gh pr edit $PR_NUMBER --remove-label '${{ env.ready_label }}' --repo my-wrm/dummy-project
           gh pr edit $PR_NUMBER --add-label '${{ env.deployed_label }}' --repo my-wrm/dummy-project
         done < pr.txt
