--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -7,27 +7,25 @@ on:
       - labeled
 
 env:
-  repo: my-wrm/dummy-project
   deploy_label: to deploy
   ready_label: ready to deploy
 
-
 jobs:
   build:
+    if: github.event.label.name == 'to deploy'
     runs-on: ubuntu-latest
     steps:
     - name: merge
-      if: github.event.label.name == '${{ env.deploy_label }}'
       run: |
+        echo "label: ${{ env.deploy_label }}"
         echo "Merging... ${{ github.event.pull_request.title }} #${{ github.event.pull_request.number }}"
-        gh pr merge ${{ github.event.pull_request.number }} --merge --repo my-wrm/dummy-project
-        gh pr edit ${{ github.event.pull_request.number }} --remove-label '${{ env.deploy_label }}' --repo my-wrm/dummy-project
-        gh pr edit ${{ github.event.pull_request.number }} --add-label '${{ env.ready_label }}' --repo my-wrm/dummy-project
+        gh pr merge ${{ github.event.pull_request.number }} --squash --repo ${{ github.event.repository.full_name }}
+        gh pr edit ${{ github.event.pull_request.number }} --remove-label '${{ env.deploy_label }}' --repo ${{ github.event.repository.full_name }}
+        gh pr edit ${{ github.event.pull_request.number }} --add-label '${{ env.ready_label }}' --repo ${{ github.event.repository.full_name }}
       env:
         GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
 
     - name: Send greeting
       run: |
-        echo "${{ toJSON(github.event.repository) }}"
-        echo ">> ${{ toJSON(github.event.pull_request) }}"
+        echo "${{ github.event.repository.full_name }}"
 
