--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,6 +4,7 @@ on:
   workflow_dispatch:
 
 env:
+  target_env: dev
   ready_label: ready to deploy
   deployed_label: deployed
 
@@ -11,18 +12,25 @@ jobs:
   deploy-info:
     runs-on: ubuntu-latest
     steps:
-    - name: show deploy info
+    - name: Set Timezone
+      uses: szenius/set-timezone@v1.0
+        with:
+          timezoneLinux: "Asia/Bangkok"
+
+    - name: Show deploy info & Create issue at deploy time
       run: |
+        echo "Deploy following pull requests:\n\n" > issue.txt
         gh pr list --label '${{ env.ready_label }}' --state merged --repo my-wrm/dummy-project > pr.txt
         while read PR_ITEM; do
           PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
           PR_TITLE=$(echo $PR_ITEM | awk '{ print $2 }')
           gh pr edit $PR_NUMBER --remove-label '${{ env.ready_label }}' --repo my-wrm/dummy-project
           gh pr edit $PR_NUMBER --add-label '${{ env.deployed_label }}' --repo my-wrm/dummy-project
+          echo "- #$PR_NUMBER" >> issue.txt
           echo "::notice title=Deploying Pull Request::#$PR_ITEM"
         done < pr.txt
-        
+
+        TIMESTAMP=$(date '+%b %d, %Y %H:%I')
+        gh issue create --title "Deploy to ${{ env.target_env }} at $TIMESTAMP" --body-file "issue.txt"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
-        
