--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,14 +23,14 @@ jobs:
         gh pr list --label '${{ env.ready_label }}' --state merged --repo my-wrm/dummy-project > pr.txt
         while read PR_ITEM; do
           PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
-          PR_TITLE=$(echo $PR_ITEM | awk '{ print $2 }')
-          gh pr edit $PR_NUMBER --remove-label '${{ env.ready_label }}' --repo my-wrm/dummy-project
-          gh pr edit $PR_NUMBER --add-label '${{ env.deployed_label }}' --repo my-wrm/dummy-project
           echo "- #$PR_NUMBER" >> issue.txt
           echo "::notice title=Deploying Pull Request::#$PR_ITEM"
         done < pr.txt
-
-        TIMESTAMP=$(date '+%b %d, %Y %H:%I')
-        gh issue create --title "Deploy to ${{ env.target_env }} at $TIMESTAMP" --body-file "issue.txt"
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+
+
+# gh pr edit $PR_NUMBER --remove-label '${{ env.ready_label }}' --repo my-wrm/dummy-project
+# gh pr edit $PR_NUMBER --add-label '${{ env.deployed_label }}' --repo my-wrm/dummy-project
+# TIMESTAMP=$(date '+%b %d, %Y %H:%I')
+# gh issue create --title "Deploy to ${{ env.target_env }} at $TIMESTAMP" --body-file "issue.txt"
