--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,29 +3,12 @@ name: Deploy
 on:
   workflow_dispatch:
 
-env:
-  target_env: dev
-  ready_label: ready to deploy
-  deployed_label: deployed
-  GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-
 jobs:
-  deploy-info:
+  deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Set Timezone
-      uses: szenius/set-timezone@v1.0
-      with:
-        timezoneLinux: "Asia/Bangkok"
-        
-    - name: Create a Issue
+    - name: Deploy
       run: |
-        echo "Deploy following pull requests:\n\n" > issue.txt
-        gh pr list --label '${{ env.ready_label }}' --state merged --repo ${{ github.event.repository.full_name }} > pr.txt
-        while read PR_ITEM; do
-          PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
-          echo "- #$PR_NUMBER" >> issue.txt
-          echo "::notice title=Deploying Pull Request::#$PR_ITEM"
-        done < pr.txt
-        TIMESTAMP=$(date '+%b %d, %Y %H:%I')
-        gh issue create --title "Deploy to ${{ env.target_env }} at $TIMESTAMP" --body-file "issue.txt" --repo ${{ github.event.repository.full_name }}
+        echo "Deploying"
+        
+        
