--- a/.github/workflows/notify-bot.yml
+++ b/.github/workflows/notify-bot.yml
@@ -5,7 +5,7 @@ on:
   workflow_run:
     workflows: ["Deploy"]
     types:
-      - success
+      - completed
 
 env:
   target_env: dev
@@ -14,8 +14,9 @@ env:
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
-  notify:
+  notify-on-success:
     runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'success' }}
     steps:
     - name: Set Timezone
       uses: szenius/set-timezone@v1.0
@@ -41,3 +42,13 @@ jobs:
           gh pr edit $PR_NUMBER --add-label '${{ env.deployed_label }}' --repo ${{ github.event.repository.full_name }}
           echo "::notice title=Deployed Pull Request::#$PR_ITEM"
         done < pr.txt
+
+    notify-on-success:
+      runs-on: ubuntu-latest
+      if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+      steps:
+      - name: Fail
+        run: |
+          echo "Fail"
+  
+  
