--- a/.github/workflows/notify-bot.yml
+++ b/.github/workflows/notify-bot.yml
@@ -43,12 +43,12 @@ jobs:
           echo "::notice title=Deployed Pull Request::#$PR_ITEM"
         done < pr.txt
 
-    notify-on-success:
-      runs-on: ubuntu-latest
-      if: ${{ github.event.workflow_run.conclusion == 'failure' }}
-      steps:
-      - name: Fail
-        run: |
-          echo "Fail"
+  notify-on-failure:
+    runs-on: ubuntu-latest
+    if: ${{ github.event.workflow_run.conclusion == 'failure' }}
+    steps:
+    - name: Fail
+      run: |
+        echo "Fail"
   
   
