--- a/.github/workflows/notify-bot.yml
+++ b/.github/workflows/notify-bot.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Create a Issue
       run: |
-        echo "${{ toJSON(github.event.workflow_run) }}"
-        echo "Deploy following pull requests:" > issue.txt
+        echo $"Deployed Complete by ([${{ github.event.workflow_rungithub.event.workflow_run.run_number }}](${{ github.event.workflow_run.html_url }}))\n" > issue.txt
+        echo $"Pull requests:\n" >> issue.txt
         gh pr list --label '${{ env.ready_label }}' --state merged --repo ${{ github.event.repository.full_name }} > pr.txt
         while read PR_ITEM; do
           PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
