--- a/.github/workflows/notify-bot.yml
+++ b/.github/workflows/notify-bot.yml
@@ -25,8 +25,8 @@ jobs:
 
     - name: Create a Issue
       run: |
-        echo $"Deployed Complete by ([${{ github.event.workflow_rungithub.event.workflow_run.run_number }}](${{ github.event.workflow_run.html_url }}))\n" > issue.txt
-        echo $"Pull requests:\n" >> issue.txt
+        echo $"Deployed Complete via Workflow [${{ github.event.workflow_run.name }} #${{ github.event.workflow_run.run_number }}](${{ github.event.workflow_run.html_url }})" > issue.txt
+        echo $"Pull requests:" >> issue.txt
         gh pr list --label '${{ env.ready_label }}' --state merged --repo ${{ github.event.repository.full_name }} > pr.txt
         while read PR_ITEM; do
           PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
@@ -34,14 +34,14 @@ jobs:
         done < pr.txt
         gh issue create --title "Deployed to ${{ env.target_env }}" --body-file "issue.txt" --repo ${{ github.event.repository.full_name }}
         
-    # - name: Update Deploy Status on Pull Request
-    #   run: |
-    #     while read PR_ITEM; do
-    #       PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
-    #       gh pr edit $PR_NUMBER --remove-label '${{ env.ready_label }}' --repo ${{ github.event.repository.full_name }}
-    #       gh pr edit $PR_NUMBER --add-label '${{ env.deployed_label }}' --repo ${{ github.event.repository.full_name }}
-    #       echo "::notice title=Deployed Pull Request::#$PR_ITEM"
-    #     done < pr.txt
+    - name: Update Deploy Status on Pull Request
+      run: |
+        while read PR_ITEM; do
+          PR_NUMBER=$(echo $PR_ITEM | awk '{ print $1 }')
+          gh pr edit $PR_NUMBER --remove-label '${{ env.ready_label }}' --repo ${{ github.event.repository.full_name }}
+          gh pr edit $PR_NUMBER --add-label '${{ env.deployed_label }}' --repo ${{ github.event.repository.full_name }}
+          echo "::notice title=Deployed Pull Request::#$PR_ITEM"
+        done < pr.txt
 
   notify-on-failure:
     runs-on: ubuntu-latest
