--- a/.github/workflows/notify-bot.yml
+++ b/.github/workflows/notify-bot.yml
@@ -25,7 +25,7 @@ jobs:
 
     - name: Create a Issue
       run: |
-        echo $"Deployed Complete via Workflow [${{ github.event.workflow_run.name }} #${{ github.event.workflow_run.run_number }}](${{ github.event.workflow_run.html_url }})" > issue.txt
+        echo $"### Deployed Complete via Workflow [${{ github.event.workflow_run.name }} #${{ github.event.workflow_run.run_number }}](${{ github.event.workflow_run.html_url }})" > issue.txt
         echo $"Pull requests:" >> issue.txt
         gh pr list --label '${{ env.ready_label }}' --state merged --repo ${{ github.event.repository.full_name }} > pr.txt
         while read PR_ITEM; do
